--- a/home.html
+++ b/home.html
@@ -21,7 +21,7 @@
     
                     <p class="address1"><i class="fa-regular fa-address-card"></i><a href="about.html">ABOUT</a></p>
     
-                    <p class="address1"><i class="fa-solid fa-arrow-right-from-bracket"></i><a href="login.html">LOGOUT</a></p>
+                    <p class="address1"><i class="fa-solid fa-arrow-right-from-bracket"></i><a href="index.html">LOGOUT</a></p>
                 </div>
             </div>
         </header>
